--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main class="main-container">
         <form action="" id="formulario" class="formulario">
-            <label for="pizzas">Ingrese un numero:</label>
+            <label for="pizzas" class="label-titulo">Ingrese un numero:</label>
             <div class="lineal1"></div>
             <input type="number" id="selectorPizza" class="input-container" name="pizzas">
             <button id="idButton" class="boton" type="submit" >Agregar</button>
