--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <label for="pizzas" class="label-titulo">Ingrese un numero:</label>
             <div class="lineal1"></div>
             <input type="number" id="selectorPizza" class="input-container" name="pizzas">
-            <button id="idButton" class="boton" type="submit" >Agregar</button>
+            <button id="idButton" class="boton" type="submit" >Buscar</button>
             </form>
             <div class="lineal"></div>
             <div id="mostarSeleccion" class="div-container">
